Replace remove(0) with removeFirst()